--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: FE pksung1
+title: FE seonpark
 email: pksung1@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   프론트엔드 개발자로 활동하는 seonpark입니다.
